feat(policies): add Terms & Refund pages, footer links; complete Phase 7

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" crossorigin>
     <title>ESFALGERIA — شحن عملات FC بسرعة وأمان</title>
     <meta name="description" content="اشحن عملات FC بسرعة وأمان عبر ESFALGERIA. تسليم فوري، دعم عبر واتساب، بدون تسجيل." />
     <meta property="og:type" content="website" />
@@ -14,7 +17,11 @@
     <meta name="theme-color" content="#0b0f19" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&family=Tajawal:wght@400;500;700;800&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
+    </noscript>
+    <link rel="preload" as="image" href="/og-default.png" fetchpriority="low">
   </head>
   <body>
     <div id="root"></div>
